# draci-inference

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/: DATA.md  download_luld_databento.py
draci/: __init__.py  conformal.py  dgp.py  methods.py  nuisance.py
empirical/: __main__.py  config.py  cross_sectional.py  data_prep.py  misspecification.py  mixing_diagnostics.py  panel_draci.py  run_all.py  sensitivity.py
paper/tables/: coverage_table.tex
simulation/: __main__.py  config.py  sim_coverage.py
tests/: conftest.py  test_conformal_methods.py  test_dgp.py  test_nuisance.py
