[project]
name = "draci-inference"
version = "0.1.0"
description = "Doubly Robust Adaptive Conformal Inference for treatment effects under mixing dependence"
authors = [
    {name = "Andreas Koukorinis", email = "a.koukorinis@cs.ucl.ac.uk"},
]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]
empirical = [
    "pandas>=2.0",
    "tqdm>=4.65",
    "joblib>=1.3",
    "matplotlib>=3.7",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
all = [
    "draci-inference[xgboost,empirical,dev]",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["draci*", "simulation*", "empirical*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
